(Fix) Align edit bucket button

--- a/src/client/app/auth/signup/login.css
+++ b/src/client/app/auth/signup/login.css
@@ -11,11 +11,6 @@ span {
     flex: 1 1 auto;
 }
 
-.container {
-    width: 500px;
-    float: left;
-    margin-top: 50px;
-}
 
 .panel-heading {
     background-color: rgb(30, 95, 134);
@@ -46,4 +41,13 @@ span {
 .form-group {
     padding-left: 20px;
     padding-right: 20px;
+}
+.noselect {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none;   /* Chrome/Safari/Opera */
+  -khtml-user-select: none;    /* Konqueror */
+  -moz-user-select: none;      /* Firefox */
+  -ms-user-select: none;       /* Internet Explorer/Edge */
+  user-select: none;           /* Non-prefixed version, currently
+                                  not supported by any browser */
 }
